fixed 1.18.2 forge and improved/fixed selfupdater however it adds popup again unfortunately